Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -571,12 +571,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_one():\n",
-    "    pass"
+    "    return 3"
    ]
   },
   {
@@ -586,7 +586,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_three():\n",
-    "    pass"
+    "    return 9"
    ]
   },
   {
