--- a/index.ipynb
+++ b/index.ipynb
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,12 +591,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_six():\n",
-    "    pass"
+    "    return 18"
    ]
   },
   {
@@ -606,7 +606,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_nine():\n",
-    "    pass"
+    "    pa"
    ]
   },
   {
