Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -601,12 +601,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_nine():\n",
-    "    pa"
+    "    return 27"
    ]
   },
   {
