--- a/index.ipynb
+++ b/index.ipynb
@@ -870,12 +870,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    pass"
+    "    constant = term[0]*term[1]\n",
+    "    exponent = term[1] - 1\n",
+    "    return (constant, exponent,term[2])"
    ]
   },
   {
